Spring-6.0.18
BND updated to produce valid MANIFEST.MF files

Fix tests
* ScopeTests - I'm not very sure this is right and should be verified for correctness
There are still 7 test failures in the test-support plugin.
There are many IT errors
All errors seem to be related to the Java 17 update and will require the OSGi framework to be updated

More minor security stuff removed