@@ -113,6 +113,7 @@
                                 <value>${osgi.test.platform}</value>
                             </property>
                         </systemProperties>
+                        <argLine>--add-opens=java.base/java.net=ALL-UNNAMED</argLine>
                     </configuration>
                 </plugin>
             </plugins>
